--- a/assets/css/topbar.css
+++ b/assets/css/topbar.css
@@ -62,7 +62,7 @@
     font-size: 24px;
     margin-bottom: 0;
     font-weight: 600;
-    color: #012970;
+    color: rgb(71, 69, 136);
   }
   
   /*--------------------------------------------------------------
@@ -370,7 +370,7 @@
   .logo span {
     font-size: 26px;
     font-weight: 700;
-    color: #012970;
+    color: rgb(71, 69, 136);
     font-family: "Nunito", sans-serif;
   }
   
